--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,40 @@
 asgiref==3.5.2
+black==22.8.0
+certifi==2022.6.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+convertdate==2.4.0
+cycler==0.11.0
+Cython==0.29.32
 Django==4.1.4
+ephem==4.1.3
+Flask==2.2.2
+Flask-SQLAlchemy==2.5.1
+fonttools==4.37.1
+hijri-converter==2.2.4
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+korean-lunar-calendar==0.2.1
+MarkupSafe==2.1.1
+mypy-extensions==0.4.3
+numpy==1.23.3
+pandas==1.4.4
+pathspec==0.10.1
+Pillow==9.2.0
+platformdirs==2.5.2
+PyMeeus==0.5.11
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-decouple==3.6
+pytz==2022.2.1
+requests==2.28.1
+setuptools-git==1.2
+six==1.16.0
+SQLAlchemy==1.4.41
 sqlparse==0.4.3
+tomli==2.0.1
+tqdm==4.64.1
+urllib3==1.26.12
+Werkzeug==2.2.2
